[package]
name = "boringtun_example"
version = "0.1.0"
authors = ["CSchleich <schleich.cdaniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringtun = "0.3.0"
reqwest = {default-features = false, version = "0.11", features = ["blocking", "json", "rustls-tls"]}
serde = {version = "1", features = ["derive", "std"]}
base64 = "0.13"
serde_json = "1.0.64"
ron = "0.6.4"